# synthara-backend

./: .env.example  .gitignore  README.md  implementation-plan.md  pyproject.toml
alphaxiv-bridge/: README.md  package-lock.json  package.json
alphaxiv-bridge/src/: server.mjs
app/: __init__.py  main.py  settings.py
app/agents/: __init__.py
app/api/: __init__.py
app/api/routes/: __init__.py  research.py  root.py
app/citations/: __init__.py  engine.py
app/export/: __init__.py  markdown.py
app/formatters/: __init__.py
app/knowledge/: __init__.py  extraction.py
app/orchestration/: __init__.py
app/paper/: __init__.py  generator.py
app/repositories/: __init__.py  research.py
app/research/: __init__.py  normalization.py  orchestrator.py  providers.py
app/schemas/: __init__.py  research.py
app/services/: __init__.py  research.py
app/templates/: __init__.py  registry.py
app/utils/: __init__.py  ids.py
tests/: test_api.py  test_normalization_and_extraction.py  test_orchestrator.py  test_providers.py  test_repositories.py  test_schemas.py
