[project]
name = "backend"
version = "0.1.0"
description = "Synthara Research backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.0",
    "httpx>=0.28.0",
]

[project.scripts]
backend = "app.main:main"

[build-system]
requires = ["uv_build>=0.9.29,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "app"
module-root = ""
